--- a/deploy.yaml
+++ b/deploy.yaml
@@ -9,7 +9,7 @@ hosts:
   prod:
     remote_user: root
     hostname: citas.afac-avciv.com
-    deploy_path: '/var/www/citas.afac-avciv.com'
+    deploy_path: '/var/www/sistema-citas'
 
 tasks:
   deploy: 
