--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.12",
         "livewire/livewire": "^2.5",
+        "spatie/laravel-permission": "^5.9",
         "wireui/wireui": "^1.17"
     },
     "require-dev": {
