--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "league/flysystem-aws-s3-v3": "^3.12",
         "livewire/livewire": "^2.5",
         "spatie/laravel-permission": "^5.9",
+        "wire-elements/modal": "^1.0",
         "wireui/wireui": "^1.17"
     },
     "require-dev": {
