--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "livewire/livewire": "^2.5",
         "power-components/livewire-powergrid": "^3.7",
         "spatie/laravel-permission": "^5.9",
+        "twilio/sdk": "^7.2",
         "wire-elements/modal": "^1.0",
         "wireui/wireui": "^1.17"
     },
