--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laravelcollective/html": "^6.4",
         "league/flysystem-aws-s3-v3": "^3.12",
         "livewire/livewire": "^2.5",
         "power-components/livewire-powergrid": "^3.7",
