--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "league/flysystem-aws-s3-v3": "^3.12",
         "livewire/livewire": "^2.5",
         "power-components/livewire-powergrid": "^3.7",
+        "rappasoft/laravel-livewire-tables": "^2.12",
         "spatie/laravel-permission": "^5.9",
         "wire-elements/modal": "^1.0",
         "wireui/wireui": "^1.17"
