--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "laravelcollective/html": "^6.4",
         "league/flysystem-aws-s3-v3": "^3.12",
         "livewire/livewire": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "power-components/livewire-powergrid": "^3.7",
+        "rappasoft/laravel-livewire-tables": "^2.14",
         "spatie/laravel-permission": "^5.9",
         "wire-elements/modal": "^1.0",
         "wireui/wireui": "^1.17"
