--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "maatwebsite/excel": "^3.1",
         "power-components/livewire-powergrid": "^3.7",
         "rappasoft/laravel-livewire-tables": "^2.14",
+        "sinergi/browser-detector": "^6.1",
         "spatie/laravel-permission": "^5.9",
         "wire-elements/modal": "^1.0",
         "wireui/wireui": "^1.17"
