--- a/deploy.yaml
+++ b/deploy.yaml
@@ -25,8 +25,7 @@ tasks:
     - npm:run:prod
     - deploy:publish
   npm:run:prod:
-    script:
-      - 'cd {{release_path}} && npm run prod'
-      
+    - run: 'cd {{release_path}} && npm run prod'
+
 after:
   deploy:failed: deploy:unlock
