--- a/deploy.yaml
+++ b/deploy.yaml
@@ -22,10 +22,11 @@ tasks:
     - artisan:event:cache
     - artisan:migrate
     - npm:install
-    - npm:run:prod
+    - build
     - deploy:publish
-  npm:run:prod:
-    - run: 'cd {{release_path}} && npm run prod'
+  build:
+    - cd: "{{release_path}}"
+    - run: "npm run prod"
 
 after:
   deploy:failed: deploy:unlock
