--- a/deploy.yaml
+++ b/deploy.yaml
@@ -26,7 +26,7 @@ tasks:
     - deploy:publish
   build:
     - cd: "{{release_path}}"
-    - run: "npm run prod"
+    - run: npm run prod
 
 after:
   deploy:failed: deploy:unlock
