--- a/deploy.yaml
+++ b/deploy.yaml
@@ -22,11 +22,11 @@ tasks:
     - artisan:event:cache
     - artisan:migrate
     - npm:install
-    - build
+    - npm:build
     - deploy:publish
   build:
-    - cd: "{{release_path}}" 
+    - cd: "{{release_path}}"
+    - run: "npm run prod"
 
-    
 after:
   deploy:failed: deploy:unlock
