--- a/deploy.yaml
+++ b/deploy.yaml
@@ -22,8 +22,9 @@ tasks:
     - artisan:event:cache
     - artisan:migrate
     - npm:install
-    - npm:build
+    - build
     - deploy:publish
+
   build:
     - cd: "{{release_path}}"
     - run: "npm run prod"
