--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,15 +1,15 @@
-import:
+import: 
   - recipe/laravel.php
   - contrib/npm.php
 
 config:
-  repository: "https://github.com/Agencia-Federal-De-Aviacion-Civil/sistema-citas.git"
+  repository: 'https://github.com/Agencia-Federal-De-Aviacion-Civil/sistema-citas.git'
 
 hosts:
-  prod:
+  afacserver:
     remote_user: root
     hostname: citas-medicina.afac-avciv.com
-    deploy_path: "/var/www/sistema-citas"
+    deploy_path: '/var/www/sistema-citas'
 
 tasks:
   deploy:
@@ -27,7 +27,7 @@ tasks:
 
   build:
     - cd: "{{release_path}}"
-    - run: "npm run prod"
+    - run: "npm run prod"  
 
 after:
   deploy:failed: deploy:unlock
