--- a/deploy.yaml
+++ b/deploy.yaml
@@ -27,7 +27,7 @@ tasks:
 
   build:
     - cd: "{{release_path}}"
-    - run: "npm run prod"  
+    - run: "npm run build"  
 
 after:
   deploy:failed: deploy:unlock
