--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -10,19 +10,18 @@ on:
     inputs:
       deploy_env:
         # Friendly description to be shown in the UI instead of 'name'
-        description: 'Deploy environment'
+        description: 'Deploy Environmet'
         # Default value if no value is explicitly provided
         default: 'afac-server'
         # Input has to be provided for the workflow to run
         required: true
-        # The data type of the input
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  deploy: 
-    name: Development
+  deploy:
+    name: Deployment
     runs-on: ubuntu-latest
-  
+    
     steps:
       - uses: actions/checkout@v2
       
@@ -40,3 +39,4 @@ jobs:
           private-key: ${{ secrets.PRIVATE_KEY }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           dep: deploy ${{ github.event.inputs.deploy_env }} -v
+ 
