--- a/deploy.yaml
+++ b/deploy.yaml
@@ -6,7 +6,7 @@ config:
   repository: 'https://github.com/Agencia-Federal-De-Aviacion-Civil/sistema-citas.git'
 
 hosts:
-  afacserver:
+  afac-server:
     remote_user: root
     hostname: citas-medicina.afac-avciv.com
     deploy_path: '/var/www/sistema-citas'
