--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "livewire/livewire": "^2.5",
         "maatwebsite/excel": "^3.1",
         "power-components/livewire-powergrid": "^3.7",
+        "predis/predis": "^2.2",
         "rappasoft/laravel-livewire-tables": "^2.14",
         "sinergi/browser-detector": "^6.1",
         "spatie/laravel-permission": "^5.9",
