--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "power-components/livewire-powergrid": "^3.7",
         "predis/predis": "^2.2",
         "rappasoft/laravel-livewire-tables": "^2.14",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.3",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "sinergi/browser-detector": "^6.1",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-permission": "^5.9",
