--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "sinergi/browser-detector": "^6.1",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-permission": "^5.9",
+        "tymon/jwt-auth": "^2.1",
         "wire-elements/modal": "^1.0",
         "wireui/wireui": "^1.17"
     },
