--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "tailwindcss": "^3.1.0"
     },
     "dependencies": {
-        "flatpickr": "^4.6.13"
+        "flatpickr": "^4.6.13",
+        "slim-select": "^2.9.2"
     }
 }
